<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:text="@string/rock_paper_scissors"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="364dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="198dp"
                android:layout_height="match_parent"
                android:text="@string/computer"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="213dp"
                android:layout_height="48dp"
                android:text="@string/player"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="198dp"
                    android:layout_height="249dp"
                    android:src="@drawable/paper" />

                <TextView
                    android:id="@+id/txtCom"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/wait_player"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!--                <Button-->
                <!--                    android:id="@+id/scissors"-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:text="@string/scissors" />-->

                <!--                <Button-->
                <!--                    android:id="@+id/rock"-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_weight="1"-->
                <!--                    android:text="@string/rock" />-->

                <!--                <Button-->
                <!--                    android:id="@+id/paper"-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_weight="1"-->
                <!--                    android:text="@string/paper" />-->

                <ImageButton
                    android:id="@+id/imageButtonScissors"
                    android:layout_width="213dp"
                    android:layout_height="100dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/scissor" />

                <ImageButton
                    android:id="@+id/imageButtonRock"
                    android:layout_width="213dp"
                    android:layout_height="100dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/rock" />

                <ImageButton
                    android:id="@+id/imageButtonPaper"
                    android:layout_width="213dp"
                    android:layout_height="100dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/paper" />

            </LinearLayout>

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/play_choose_a_button"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:textAlignment="center"
        android:textSize="20sp" />

</LinearLayout>